--- a/includes/header.html
+++ b/includes/header.html
@@ -4,8 +4,13 @@
     <a href="menu.php">Menu</a>
     <a href="about.php">About</a>
 </nav>
-<div id="hamburger">
+<div id="hamburger" onclick="toggleMenu()">
     <div></div>
     <div></div>
     <div></div>
+</div>
+<div id="hamburger_menu">
+    <a href="index.php">Home</a>
+    <a href="menu.php">Menu</a>
+    <a href="about.php">About</a>
 </div>
