--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,7 +1,7 @@
 <div id="footer_nav">
-    <a href="index.html">Home</a>
-    <a href="menu.html">Menu</a>
-    <a href="about.html">About</a>
+    <a href="index.php">Home</a>
+    <a href="menu.php">Menu</a>
+    <a href="about.php">About</a>
 </div>
 <div id="copy">
     <p>Copyright 2024 &copy; Mama Lulus</p>
